[gd_scene load_steps=4 format=3 uid="uid://cvlgi2dmtqpex"]

[ext_resource type="Script" path="res://Scenes/Level/GUI/Items/item_details.gd" id="1_n4gd7"]
[ext_resource type="Texture2D" uid="uid://cr7fe18xyeym0" path="res://Textures/Level/Store/expbar.png" id="3_5b6s8"]
[ext_resource type="FontFile" uid="uid://ctfaaculprqq7" path="res://Font/tenderness.otf" id="3_avaj1"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(256, 40)
offset_right = 256.0
offset_bottom = 40.0
script = ExtResource("1_n4gd7")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -16.0
offset_right = 36.0
offset_bottom = 16.0
grow_vertical = 2

[node name="Price" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 17.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_avaj1")
theme_override_font_sizes/font_size = 12
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 4.0
offset_right = 72.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_avaj1")
theme_override_font_sizes/font_size = 12
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 18.0
offset_right = 252.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_avaj1")
theme_override_font_sizes/font_size = 8
text = "Description of Item"
autowrap_mode = 3

[node name="LevelBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_right = 40.0
grow_vertical = 0
max_value = 10.0
value = 7.0
nine_patch_stretch = true
texture_progress = ExtResource("3_5b6s8")
tint_progress = Color(0, 1, 1, 1)

[node name="Filter" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.596078)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
